--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Lobster&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="./css/main.css">
+	<link rel="stylesheet" href="./main.css">
 	<title>LOOK ORDER</title>
 	
 </head>
@@ -14,7 +14,7 @@
 		<div class="navbar">
 			<div class="navbar-top">
 				<a href="#">
-					<img src="./img/logo.svg" alt="logo" height="50">
+					<img src="./logo.svg" alt="logo" height="50">
 				</a>
 			</div>
 			<div class="navbar-main">
