--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="/js/database.js"></script>
-	<script src="/js/loook.js"></script>
+	<script src="/database.js"></script>
+	<script src="/loook.js"></script>
 </body>
 </html>
